--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.19.2",
     "dotenv": "^16.5.0",
-    "node-fetch": "^3.3.2"
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.15",
+    "node-fetch": "^3.3.2",
+    "sodium": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
