--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dotenv": "^16.5.0",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.15",
-    "node-fetch": "^3.3.2",
-    "sodium": "^3.0.2"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
