add biblia api and other translations

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@
 # Your Discord bot token
 TOKEN=your-discord-bot-token-here
 
-# ESV.org API key for fetching Bible verses
+# API keys for external services
 ESV_API_KEY=your-esv-api-key-here
+API_BIBLE_KEY=your-api-bible-key-here
 
 # Discord application (bot) client ID
 CLIENT_ID=your-discord-application-client-id
