--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "cheerio": "^1.0.0",
     "discord.js": "^14.19.2",
     "dotenv": "^16.5.0",
     "ffmpeg-static": "^5.2.0",
